--- a/client/src/components/avocatcard/avocatcard.css
+++ b/client/src/components/avocatcard/avocatcard.css
@@ -54,3 +54,9 @@
     font-family: 'Montserrat';
     margin: 0;
 }
+@media only screen  and (max-width: 800px) {
+    .card {
+        flex-direction: column;
+        align-items: center;
+    }
+  }
